Adding hooks changes

--- a/data.properties
+++ b/data.properties
@@ -1,3 +1,4 @@
 browser=chrome
-chromedriverPath=E:\\work3\\chromedriver.exe
+chromedriverPath=E:\\work1\\chromedriver.exe
+IEdriverPath=E:\\work\\IEDriverServer
 url=https://www.anz.com.au/personal/home-loans/calculators-tools/much-borrow/
